--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>FrieIOT</title>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1516c6c801117716357a4ea4bd4d920e"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
